--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://SKS787051.github.io/gpt-3",
+  "homepage": "https://sks787051.github.io/gpt-3/",
   "name": "gpt_proj",
   "version": "0.1.0",
   "private": true,
